--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@
 }
 
 body {
-  background-image: linear-gradient(0deg,
-      rgba(247, 247, 247, 1) 23.8%,
-      rgba(252, 221, 221, 1) 92%);
+  background-image: linear-gradient(
+    0deg,
+    rgba(247, 247, 247, 1) 23.8%,
+    rgba(252, 221, 221, 1) 92%
+  );
   min-height: 100vh;
   height: 100vh;
   display: flex;
@@ -22,6 +24,54 @@ body {
   margin: 0;
 }
 
+header {
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 80px;
+  background: rgba(252, 169, 169, 0.6);
+  padding: 0 30px;
+}
+
+header .logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 20px;
+  color: rgba(188, 29, 23, 0.779);
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  list-style: none;
+}
+
+.nav-links a {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  text-decoration: none;
+  color: rgba(188, 29, 23, 0.779);
+  font-size: 1.2rem;
+  font-weight: 500;
+  transition: all 0.3s ease;
+}
+.nav-links a:hover {
+  text-decoration: underline;
+}
+
+header .user {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 20px;
+  color: rgba(188, 29, 23, 0.779);
+}
 
 .logo-content {
   position: relative;
@@ -52,30 +102,33 @@ body {
 }
 
 @keyframes animate {
-
   0%,
   100% {
-    clip-path: polygon(0% 45%,
-        16% 44%,
-        33% 50%,
-        54% 60%,
-        70% 61%,
-        84% 59%,
-        100% 52%,
-        100% 100%,
-        0% 100%);
+    clip-path: polygon(
+      0% 45%,
+      16% 44%,
+      33% 50%,
+      54% 60%,
+      70% 61%,
+      84% 59%,
+      100% 52%,
+      100% 100%,
+      0% 100%
+    );
   }
 
   50% {
-    clip-path: polygon(0% 60%,
-        15% 65%,
-        34% 66%,
-        51% 62%,
-        67% 50%,
-        84% 45%,
-        100% 46%,
-        100% 100%,
-        0% 100%);
+    clip-path: polygon(
+      0% 60%,
+      15% 65%,
+      34% 66%,
+      51% 62%,
+      67% 50%,
+      84% 45%,
+      100% 46%,
+      100% 100%,
+      0% 100%
+    );
   }
 }
 
@@ -85,8 +138,6 @@ body {
   padding: 0 80px;
   color: rgba(188, 29, 23, 0.779);
 }
-
-
 
 .music-container {
   background-color: #fff;
@@ -213,5 +264,5 @@ footer {
   position: absolute;
   bottom: 1rem;
   text-align: center;
-  font-size: .85rem;
+  font-size: 0.85rem;
 }
