--- a/assets/mysongsstyle.css
+++ b/assets/mysongsstyle.css
@@ -30,7 +30,7 @@ header {
     height: 80px;
     background: rgba(252, 169, 169, 0.6);
     padding: 0 30px;
-    margin-bottom:10px;
+    margin-bottom: 10px;
 }
 
 header .logo {
@@ -38,6 +38,8 @@ header .logo {
     align-items: center;
     gap: 10px;
     font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 3px;
     color: rgba(188, 29, 23, 0.779);
 }
 
@@ -70,6 +72,7 @@ header .user {
     font-size: 20px;
     color: rgba(188, 29, 23, 0.779);
 }
+
 .music-container {
     background-color: #fff;
     border-radius: 15px;
@@ -190,14 +193,36 @@ header .user {
     transition: width 0.1s linear;
 }
 
+.theme-button {
+    height: 40px;
+    width: 40px;
+    background: #222;
+    border-radius: 50%;
+    border: 1px solid #fe8daa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    cursor: pointer;
+    z-index: 5;
+}
+
+.theme-button i {
+    color: #fe8daa;
+    transform: rotate(-30deg);
+}
+
 footer {
     position: relative;
     bottom: 0;
     text-align: center;
     font-size: .85rem;
     background-color: rgba(252, 169, 169, 0.6);
-    width:100%;
-    height:30px;
+    color: rgba(188, 29, 23, 0.779);
+    width: 100%;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -225,8 +250,9 @@ input[type="range"]::-webkit-slider-thumb {
     height: 2rem;
     width: 1rem;
 }
-#song-list{
-    height:100%;
+
+#song-list {
+    height: 100%;
     margin-bottom: 20px;
 }
 
@@ -244,16 +270,22 @@ input[type="range"]::-webkit-slider-thumb {
     box-shadow: 0 20px 20px 0 rgba(252, 169, 169, 0.6);
     padding: 20px;
     margin-bottom: 10px;
-    color:rgba(188, 29, 23, 0.779);
+    color: rgba(188, 29, 23, 0.779);
     cursor: pointer;
 }
-.song-number, .song-duration , .song-number-head, .song-duration-head{
+
+.song-number,
+.song-duration,
+.song-number-head,
+.song-duration-head {
     text-align: center;
 }
-.song-image, .song-image-head{
-    height:36px;
+
+.song-image,
+.song-image-head {
+    height: 36px;
     aspect-ratio: 1;
-    border-radius:50%;
+    border-radius: 50%;
     border: 0.5px solid #fe8daa;
     background-color: #000;
     background-repeat: no-repeat;
@@ -264,15 +296,98 @@ input[type="range"]::-webkit-slider-thumb {
     justify-items: center;
 }
 
-.layout-head{
-    height:50px;
+.layout-head {
+    height: 50px;
     cursor: default;
 }
 
-.layout:hover{
+.layout:hover {
     background-color: #ffe2e9;
 }
 
-.layout-head:hover{
+.layout-head:hover {
     background-color: #fff;
+}
+
+/* Dark Theme */
+body.dark-mode {
+    background: linear-gradient(135deg,#121212,#000000);
+    color: #ffffff;
+}
+
+body.dark-mode header {
+    background: #1f1f1f;
+}
+
+body.dark-mode header .logo,
+header .user,
+.nav-links a,
+.tagline {
+    color: #ff0066;
+}
+
+body.dark-mode .content h2:nth-child(1) {
+    -webkit-text-stroke: 2px #ff0066;
+}
+
+body.dark-mode .content h2:nth-child(2) {
+    color: #e09d9d;
+}
+
+body.dark-mode .music-container {
+    background: #1f1f1f;
+    box-shadow: 4px 10px 10px 0 rgba(83, 73, 73, 0.6);
+}
+
+body.dark-mode .img-container img {
+    outline: 2px solid #ff3355;
+    outline-offset: 4px;
+  }
+
+body.dark-mode .action-btn {
+    background: #1f1f1f;
+}
+
+body.dark-mode .music-info {
+    background: #2e2e2e;
+}
+
+body.dark-mode .progress-container {
+    background: #aaa;
+}
+
+body.dark-mode .progress {
+    background-color: #ff3355;
+}
+
+body.dark-mode input[type="range"]::-webkit-slider-thumb {
+    background: #ff0066;
+}
+
+body.dark-mode .theme-button {
+    background: #ddd;
+}
+
+body.dark-mode .theme-button i {
+    color: #ff3355;
+}
+
+body.dark-mode footer {
+    background: #1f1f1f;
+}
+
+body.dark-mode .layout {
+    background: #1f1f1f;
+    color: #ff0066;
+    box-shadow: 0 0;
+}
+
+body.dark-mode .layout:hover{
+    background: #2f2f2f;
+    color: #ff0000;
+}
+
+body.dark-mode .layout-head:hover{
+    background: #1f1f1f;
+    color: #ff0066;
 }
