--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,69 +1,73 @@
-body{
-    margin:0;
-    padding: 0;
-    font-family: sans-serif;
-    background-color: #DAFFFB;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #dafffb;
 }
 
-.main{
-    width: 100%;
-    height: 100vh;
-    height: 100dvh;
-    background-color: #DAFFFB;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.main {
+  width: 100%;
+  height: 100vh;
+  height: 100dvh;
+  background-image: linear-gradient(
+    0deg,
+    rgba(247, 247, 247, 1) 23.8%,
+    rgba(252, 221, 221, 1) 92%
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container{
-    max-width: 360px;
-    width: 100%;
-    height: 82%;
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    align-items: center;
-    overflow: hidden;
+.container {
+  max-width: 360px;
+  width: 100%;
+  height: 82%;
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: center;
+  overflow: hidden;
 }
 
-.signup_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    background-color: #176B87;
+.signup_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background: rgba(252, 169, 169, 0.6);
 }
 
-.signup_container span{
-    font-size: 30px;
-    font-weight: 600;
-    color: #DAFFFB;
-    padding: 1rem;
+.signup_container span {
+  font-size: 30px;
+  font-weight: 600;
+  color: #ffffff;
+  padding: 1rem;
 }
 
-.signup_container img{
-    margin-top: 1.5rem;
-    width: 20%;
-    transition: transform 0.9s ease-in-out;
-    border-radius: 50%;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    background-color: #DAFFFB;
+.signup_container img {
+  margin-top: 1.5rem;
+  width: 20%;
+  transition: transform 0.9s ease-in-out;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  background-color: #ffffff;
 }
 
-input{
-    width: 100%;
-    height: 50px;
-    outline: none;
-    border: 1px solid #DAFFFB;
-    border-radius: 5px;
-    padding: 0 1rem;
-    font-size: 1rem;
-    margin: 1rem 0;
-    transition: all 0.3s ease-in-out;
+input {
+  width: 100%;
+  height: 50px;
+  outline: none;
+  border: 1px solid rgba(252, 169, 169, 0.6);
+  border-radius: 5px;
+  padding: 0 1rem;
+  font-size: 1rem;
+  margin: 1rem 0;
+  transition: all 0.3s ease-in-out;
 }
 
 .group {
@@ -85,18 +89,19 @@ input{
   outline: none;
   background-color: #f8fafc;
   color: #0d0c22;
-  transition: .5s ease;
+  transition: 0.5s ease;
 }
 
 .input::placeholder {
   color: #94a3b8;
 }
 
-.input:focus, input:hover {
+.input:focus,
+input:hover {
   outline: none;
-  border-color: rgba(129, 140, 248);
+  border-color: rgba(252, 169, 169, 0.6);
   background-color: #fff;
-  box-shadow: 0 0 0 5px rgb(129 140 248 / 30%);
+  box-shadow: 0 0 10px rgb(252, 169, 169);
 }
 
 .icon {
@@ -107,47 +112,47 @@ input{
   height: 1rem;
 }
 
-.input_container{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
+.input_container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
 }
 
-button{
-    width: max-content;
-    padding-inline: 22px;
-    padding-block: 12px;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    background-color: #176B87;
-    color: #DAFFFB;
-    font-size: 1rem;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
+button {
+  width: max-content;
+  padding-inline: 22px;
+  padding-block: 12px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  background-color: rgba(252, 169, 169, 0.6);
+  color: #ffffff;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
-button:hover{
-    background-color: #DAFFFB;
-    color: #176B87;
+button:hover {
+  background-color: #ffffff;
+  color: rgba(252, 169, 169, 0.6);
 }
 
-.signup_btn{
-    margin: 1rem 0 0 0;
+.signup_btn {
+  margin: 1rem 0 0 0;
 }
 
-.forget_link{
-    font-size: 0.8rem;
-    color: #176B87;
-    text-decoration: none;
+.forget_link {
+  font-size: 0.8rem;
+  color: rgba(252, 169, 169, 0.6);
+  text-decoration: none;
 }
 
 @media (min-width: 772px) {
-    .container {
-        max-width: 380px;;
-    }
+  .container {
+    max-width: 380px;
+  }
 }
