--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,158 +1,158 @@
-body{
-    margin:0;
+body {
+    margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-color: #DAFFFB;
-}
-
-.main{
+    background-color: #dafffb;
+  }
+  
+  .main {
     width: 100%;
     height: 100vh;
     height: 100dvh;
-    background-color: #DAFFFB;
+    background-image: linear-gradient(
+      0deg,
+      rgba(247, 247, 247, 1) 23.8%,
+      rgba(252, 221, 221, 1) 92%
+    );
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.container{
+  }
+  
+  .container {
     max-width: 360px;
     width: 100%;
-    height: 82%;
+    height: 90%;
     background-color: #fff;
     border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
     justify-content: left;
     align-items: center;
     overflow: hidden;
-}
-
-.signup_container{
+  }
+  
+  .signup_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: #176B87;
-   
-}
-
-.signup_container span{
+    background: rgba(252, 169, 169, 0.6);
+  }
+  
+  .signup_container span {
     font-size: 30px;
     font-weight: 600;
-    color: #DAFFFB;
+    color: #ffffff;
     padding: 1rem;
-}
-
-.signup_container img{
+  }
+  
+  .signup_container img {
     margin-top: 1.5rem;
     width: 20%;
     transition: transform 0.9s ease-in-out;
     border-radius: 50%;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    background-color: #DAFFFB;
-}
-
-input{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    background-color: #ffffff;
+  }
+  
+  input {
     width: 100%;
     height: 50px;
     outline: none;
-    border: 1px solid #DAFFFB;
+    border: 1px solid rgba(252, 169, 169, 0.6);
     border-radius: 5px;
     padding: 0 1rem;
     font-size: 1rem;
     margin: 1rem 0;
     transition: all 0.3s ease-in-out;
-}
-
-.group {
-  display: flex;
-  line-height: 30px;
-  align-items: center;
-  position: relative;
-  max-width: 400px;
-}
-
-.input {
-  width: 100%;
-  height: 45px;
-  line-height: 30px;
-  padding: 0 2rem;
-  padding-left: 3rem;
-  border: 2px solid transparent;
-  border-radius: 10px;
-  outline: none;
-  background-color: #f8fafc;
-  color: #0d0c22;
-  transition: .5s ease;
-}
-
-.input::placeholder {
-  color: #94a3b8;
-}
-
-.input:focus, input:hover {
-  outline: none;
-  border-color: rgba(129, 140, 248);
-  background-color: #fff;
-  box-shadow: 0 0 0 5px rgb(129 140 248 / 30%);
-}
-
-.icon {
-  position: absolute;
-  left: 1rem;
-  fill: none;
-  width: 1rem;
-  height: 1rem;
-}
-
-.input_container{
+  }
+  
+  .group {
+    display: flex;
+    line-height: 30px;
+    align-items: center;
+    position: relative;
+    max-width: 400px;
+  }
+  
+  .input {
+    width: 100%;
+    height: 45px;
+    line-height: 30px;
+    padding: 0 2rem;
+    padding-left: 3rem;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    outline: none;
+    background-color: #f8fafc;
+    color: #0d0c22;
+    transition: 0.5s ease;
+  }
+  
+  .input::placeholder {
+    color: #94a3b8;
+  }
+  
+  .input:focus,
+  input:hover {
+    outline: none;
+    border-color: rgba(252, 169, 169, 0.6);
+    background-color: #fff;
+    box-shadow: 0 0 10px rgb(252, 169, 169);
+  }
+  
+  .icon {
+    position: absolute;
+    left: 1rem;
+    fill: none;
+    width: 1rem;
+    height: 1rem;
+  }
+  
+  .input_container {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-}
-
-button{
+  }
+  
+  button {
     width: max-content;
     padding-inline: 22px;
     padding-block: 12px;
     border: none;
     outline: none;
     border-radius: 5px;
-    background-color: #176B87;
-    color: #DAFFFB;
+    background-color: rgba(252, 169, 169, 0.6);
+    color: #ffffff;
     font-size: 1rem;
     font-weight: 600;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-}
-
-button:hover{
-    background-color: #DAFFFB;
-    color: #176B87;
-}
-
-.signup_btn{
+  }
+  
+  button:hover {
+    background-color: #ffffff;
+    color: rgba(252, 169, 169, 0.6);
+  }
+  
+  .signup_btn {
     margin: 1rem 0 0 0;
-}
-
-.forget_link{
+  }
+  
+  .forget_link {
     font-size: 0.8rem;
-    color: #176B87;
+    color: rgba(252, 169, 169, 0.6);
     text-decoration: none;
-}
-
-@media (min-width: 772px) {
+  }
+  
+  @media (min-width: 772px) {
     .container {
-        max-width: 380px;;
+      max-width: 380px;
     }
-}
-
-.container{
-    height: 90%;
-}
+  }
