--- a/styles/signup.css
+++ b/styles/signup.css
@@ -22,7 +22,7 @@ body {
   .container {
     max-width: 360px;
     width: 100%;
-    height: 90%;
+   
     background-color: #fff;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -123,6 +123,7 @@ body {
   
   button {
     width: max-content;
+    
     padding-inline: 22px;
     padding-block: 12px;
     border: none;
@@ -142,7 +143,7 @@ body {
   }
   
   .signup_btn {
-    margin: 1rem 0 0 0;
+    margin: 1rem 0 1rem 0;
   }
   
   .forget_link {
